libs/config/tests/errors/ce6_expected_array/stdout.ansi
[31m[CE6] Error:[0m property was expected to be an array
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mn[0m[38;5;249mo[0m[38;5;249mt[0m[38;5;249m_[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mr[0m[38;5;249ma[0m[38;5;249my[0m[38;5;155m[[0m[38;5;155m][0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;201m"[0m[38;5;201mh[0m[38;5;201me[0m[38;5;201ml[0m[38;5;201ml[0m[38;5;201mo[0m[38;5;201m"[0m[38;5;249m;[0m
 [38;5;240m  │[0m          [38;5;155m─[0m[38;5;155m┬[0m   [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m           [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m `[38;5;155m[][0m` indicates an upcoming array
 [38;5;240m  │[0m                  [38;5;201m│[0m     
 [38;5;240m  │[0m                  [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m expected array
[38;5;246m───╯[0m
